mise à jour doc pdf

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div id="control">
                 <input type="text" placeholder="Recherche">
                 <button>Connexion</button>
+                <a href="mon-document.pdf">Télécharger le document</a>
+
             </div>
         </header>
         <main>
